# internal/modules/user/entity.go
@@ -1,0 +1,49 @@
+package user
+
+import (
+	"time"
+
+	"github.com/asliddinberdiev/i_tv_task/internal/modules/common"
+	"github.com/golang-jwt/jwt"
+	"gorm.io/gorm"
+)
+
+type User struct {
+	gorm.Model
+	FirstName string `gorm:"type:varchar(255);not null"`
+	LastName  string `gorm:"type:varchar(255);not null"`
+	Email     string `gorm:"type:varchar(255);not null;unique"`
+	Password  string `gorm:"type:varchar(255);not null"`
+}
+
+type RegisterInput struct {
+	FirstName string `json:"first_name" validate:"required,min=2,lowercase"`
+	LastName  string `json:"last_name" validate:"required,min=2,lowercase"`
+	Email     string `json:"email" validate:"required,email"`
+	Password  string `json:"password" validate:"required,min=6"`
+}
+
+type LoginInput struct {
+	Email    string `json:"email" validate:"required,email"`
+	Password string `json:"password" validate:"required,min=6"`
+}
+
+type UserResponse struct {
+	ID        uint      `json:"id"`
+	FirstName string    `json:"first_name"`
+	LastName  string    `json:"last_name"`
+	Email     string    `json:"email"`
+	CreatedAt time.Time `json:"created_at"`
+	UpdatedAt time.Time `json:"updated_at"`
+}
+
+type UserClaims struct {
+	ID uint `json:"id"`
+	jwt.StandardClaims
+}
+
+type TokenResponse struct {
+	AccessToken  string `json:"access_token"`
+	RefreshToken string `json:"refresh_token"`
+	common.ResponseID
+}
